[package]
name = "semaphore"
version = "0.1.0"
edition = "2021"
authors = [
    "Remco Bloemen <remco@worldcoin.org>",
    "Philipp Sippl <philipp@worldcoin.org>"]
homepage = "https://github.com/worldcoin/semaphore-rs"
repository = "https://github.com/worldcoin/semaphore-rs"
description = "Rust support library for Semaphore"
keywords = ["worldcoin", "protocol", "signup"]
categories = ["cryptography"]
readme = "Readme.md"
license-file = "mit-license.md"

[workspace]
members = ["crates/*"]

[features]
default = ["proof"]
proof = [
    "ark-circom",
    "ark-ec",
    "ark-groth16",
    "ark-relations",
    "ark-std",
    "color-eyre",
    "ethers-core",
    "hex",
    "num-bigint",
    "rand",
    "semaphore-depth-config",
    "semaphore-depth-macros",
    "sha2",
    "tiny-keccak",
    "wasmer",
    "zeroize",
]
bench = ["criterion", "proptest"]
dylib = ["wasmer/dylib", "wasmer-engine-dylib", "wasmer-compiler-cranelift"]
depth_16 = ["semaphore-depth-config/depth_16", "semaphore-depth-macros/depth_16"]
depth_20 = ["semaphore-depth-config/depth_20", "semaphore-depth-macros/depth_20"]
depth_30 = ["semaphore-depth-config/depth_30", "semaphore-depth-macros/depth_30"]

[[bench]]
name = "criterion"
harness = false
path = "criterion.rs"
required-features = ["bench", "proptest"]

[dependencies]
ark-bn254 = "0.3.0"
ark-circom = { git = "https://github.com/gakonst/ark-circom", rev = "a93c8b0", features = ["circom-2"], optional = true }
ark-ec = { version = "0.3.0", default-features = false, features = ["parallel"], optional = true }
ark-ff = { version = "0.3.0", default-features = false, features = ["parallel", "asm"] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"], optional = true }
ark-relations = { version = "0.3.0", default-features = false, optional = true }
ark-std = { version = "0.3.0", default-features = false, features = ["parallel"], optional = true }
color-eyre = { version = "0.6", optional = true }
criterion = { version = "0.3", optional = true, features = ["async_tokio"] }
hex = { version = "0.4.0", optional = true }
num-bigint = { version = "0.4", default-features = false, features = ["rand"], optional = true }
once_cell = "1.8"
proptest = { version = "1.0", optional = true }
rand = { version = "0.8.4", optional = true }
ruint = { version = "1.2.0", features = ["serde", "num-bigint", "ark-ff"] }
semaphore-depth-config = { path = "crates/semaphore-depth-config", optional = true }
semaphore-depth-macros = { path = "crates/semaphore-depth-macros", optional = true }
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.10.1", optional = true }
thiserror = "1.0.0"
tiny-keccak = { version = "2.0.2", optional = true }
wasmer = { version = "2.0", optional = true }
zeroize = { version = "1.6.0", optional = true }
mmap-rs = "0.5.0"

# Use the same `ethers-core` version as ark-circom
# TODO: Remove
ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false, optional = true }

[dev-dependencies]
bincode = "1.3.3"
proptest = "1.0"
rand_chacha = "0.3.1"
serde_json = "1.0.79"
tempfile = "3.0"
tiny-keccak = "2.0.2"
tracing-test = "0.2"

[build-dependencies]
color-eyre = "0.6"
enumset = "1.0.8"
reqwest = { version = "0.11", features = ["blocking"] }
wasmer = { version = "2.0" }
wasmer-engine-dylib = { version = "2.2.1", optional = true }
wasmer-compiler-cranelift = { version = "2.2.1", optional = true }
semaphore-depth-config = { path = "crates/semaphore-depth-config" }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3
